# trilha-python-dio

13 - APIs Assíncronas com FastAPI/desafio/: pyproject.toml
